Added Maven artifactory based CQRS versioning